<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/haspre_header"

        android:layout_width="match_parent"
        android:layout_height="84dp" />

    <TextView
        android:id="@+id/fooddetails_tv_show_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/point_text_color"
        android:gravity="center_horizontal"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/unit_l"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="0dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/unit_lb"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="0dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/unit_ml"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="0dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/unit_oz"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="0dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/point_title_text_color"
        android:layout_marginBottom="3dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yingyangcf" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/curhanliang" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hanliang" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fooddetails_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


</LinearLayout>