<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:weightSum="1"
    android:baselineAligned="false"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/login_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@mipmap/login_test"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        tools:ignore="ContentDescription" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        >
        <ImageView
            android:id="@+id/login_user_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/login_password"
            />
        <EditText
            android:id="@+id/email_edt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginLeft="60dp"
            />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:id="@+id/login_password_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/login_password"
            />
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="60dp"
            />
    </RelativeLayout>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_corner"
        android:layout_marginTop="70dp"
        />

    <TextView
        android:id="@+id/regist_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />





</LinearLayout>