<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_background"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:background="#fff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/regist_regist"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            >
           <ImageView
               android:id="@+id/regist_nickName_img"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:src="@mipmap/left_email"
               />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/regist_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/regist_email_edt"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="Email"

                    android:layout_marginLeft="60dp"
                    />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            >
            <ImageView
                android:id="@+id/password_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/regist_user"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/regist_nickName_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/nickName_edt"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="nickName"
                    android:layout_marginLeft="60dp"
                    />
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            >
            <ImageView
                android:id="@+id/email_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/regist_password"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/regist_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/regist_password_edt"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="Password"
                    android:password="true"
                    android:layout_marginLeft="60dp"
                    />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/regist_next_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_corner"
            android:layout_marginTop="50dp"
            />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/agree"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/user_agree"
            android:layout_marginLeft="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="#0000ff"
            />
        </RelativeLayout>

    </LinearLayout>




</LinearLayout>